--- a/ImageMetaExtractorApp/App.xaml
+++ b/ImageMetaExtractorApp/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="ImageMetaExtractorApp.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ImageMetaExtractorApp"
-             StartupUri="Views/MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
-</Application>
+﻿<prism:PrismApplication
+    x:Class="ImageMetaExtractorApp.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:prism="http://prismlibrary.com/" >
+
+    <Application.Resources />
+</prism:PrismApplication>
