--- a/ImageMetaExtractorApp/Views/MainWindow.xaml
+++ b/ImageMetaExtractorApp/Views/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="ImageMetaExtractorApp.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:v="clr-namespace:ImageMetaExtractorApp.Views"
@@ -11,38 +12,23 @@
         Height="300" Width="500">
 
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-        <ListView ItemsSource="{Binding ImageMetasSource, Mode=OneWay}" >
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="ID"
-                                    Width="50" >
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Id, StringFormat={}0x{0:x4}, Mode=OneTime}"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn Header="Tag"
-                                    Width="140" >
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Key, Mode=OneTime}"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn Header="Data"
-                                    Width="200" >
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Value, Mode=OneTime}"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                </GridView>
-            </ListView.View>
-        </ListView>
+        <Button Content="AddTab"
+                Command="{Binding AddTabCommand, Mode=OneTime}" />
 
+        <TabControl Grid.Row="1"
+                    prism:RegionManager.RegionName="MetaTabDetailsRegion"
+                    TabStripPlacement="Left" >
+            <TabControl.Resources>
+                <Style TargetType="TabItem">
+                    <Setter Property="Header" Value="{Binding DataContext.MetaItemGroup.Name}" />
+                </Style>
+            </TabControl.Resources>
+        </TabControl>
     </Grid>
     
 </Window>
