--- a/ImageMetaExtractorApp/Views/MainWindow.xaml
+++ b/ImageMetaExtractorApp/Views/MainWindow.xaml
@@ -33,7 +33,8 @@
 
         <TabControl Grid.Row="1"
                     prism:RegionManager.RegionName="MetaTabDetailsRegion"
-                    TabStripPlacement="Left" >
+                    TabStripPlacement="Left" 
+                    SelectedItem="{Binding TabControlSelectedItem.Value, Mode=TwoWay}" >
             <TabControl.Resources>
                 <Style TargetType="TabItem">
                     <Setter Property="Header" Value="{Binding DataContext.MetaItemGroup.Name}" />
@@ -41,5 +42,5 @@
             </TabControl.Resources>
         </TabControl>
     </Grid>
-    
+
 </Window>
