--- a/ImageMetaExtractorApp/Views/MetaTabControl.xaml
+++ b/ImageMetaExtractorApp/Views/MetaTabControl.xaml
@@ -11,6 +11,7 @@
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" >
 
+    <!-- SelectedValuePathでMetaTabDetailViewModelのfieldを指定している -->
     <TabControl TabStripPlacement="Left" 
                 prism:RegionManager.RegionName="MetaTabDetailsRegion"
                 SelectedValuePath="DataContext.MetaItemGroup.Name"
