--- a/02_PrismDropNavigation/PrismDropNavigation.TabItem/Views/TabItemTriple.xaml
+++ b/02_PrismDropNavigation/PrismDropNavigation.TabItem/Views/TabItemTriple.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PrismDropNavigation.TabItem.Views.TabItemDouble"
+﻿<UserControl x:Class="PrismDropNavigation.TabItem.Views.TabItemTriple"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:v="clr-namespace:PrismDropNavigation.TabItem.Views"
