--- a/ImageMetaExtractorApp/Views/MetaTabControl.xaml
+++ b/ImageMetaExtractorApp/Views/MetaTabControl.xaml
@@ -14,11 +14,11 @@
     <!-- SelectedValuePathでMetaTabDetailViewModelのfieldを指定している -->
     <TabControl TabStripPlacement="Left" 
                 prism:RegionManager.RegionName="MetaTabDetailsRegion"
-                SelectedValuePath="DataContext.MetaItemGroup.Name"
+                SelectedValuePath="DataContext.TabName.Value"
                 SelectedValue="{Binding TabControlSelectedTitle, Mode=OneWayToSource}" >
         <TabControl.Resources>
             <Style TargetType="TabItem">
-                <Setter Property="Header" Value="{Binding DataContext.MetaItemGroup.Name}" />
+                <Setter Property="Header" Value="{Binding DataContext.TabName.Value}" />
             </Style>
         </TabControl.Resources>
     </TabControl>
