--- a/07_WindowTheme/WindowChrome/Styles/Controls.xaml
+++ b/07_WindowTheme/WindowChrome/Styles/Controls.xaml
@@ -5,6 +5,9 @@
         <ResourceDictionary Source="Controls.CheckBox.xaml" />
         <!--
         <ResourceDictionary Source="Controls.FocusVisualStyle.xaml" />
+        -->
+        <ResourceDictionary Source="Controls.Menu.xaml" />
+        <!--
         <ResourceDictionary Source="Controls.PasswordBox.xaml" />
         -->
         <ResourceDictionary Source="Controls.RadioButton.xaml" />
